--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,12 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.13",
+    "eslint-config-next": "^14.2.13",
     "framer-motion": "^11.0.15",
-    "next": "14.1.3",
-    "react": "^18",
-    "react-dom": "^18",
+    "next": "^14.2.13",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
-    "recharts": "^2.12.3"
+    "recharts": "^2.12.7"
   }
 }
